--- a/app/templates/comments.html
+++ b/app/templates/comments.html
@@ -19,6 +19,7 @@
                     {% endif %}
                     <h4 class="card-text">Comments</h4>
                     <form action="" method="POST" novalidate>
+                        {{ form.csrf_token }}
                         {{ wtf.form_field(form.comment) }}
                         {{ wtf.form_field(form.submit, class="btn btn-primary") }}
                     </form>
@@ -27,7 +28,7 @@
                         {% for comment in comments %}
                         <li class="list-group-item">
                             <div class="row align-items-center">
-                                <a class="col-4" href={{url_for('profile', username=comment.username)}}><span class="fa fa-user" style="font-size: 25px"></span>&nbsp;{{comment.username}}</a>
+                                <a class="col-4"><span class="fa fa-user" style="font-size: 25px"></span>&nbsp;{{comment.username}}</a>
                                 <span class="col-8 text-right">{{post.creation_time}}</span>
                             </div>
                             <p>{{comment.comment}}</p>
