--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,6 +17,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Access an existing profile</h5>
                     <form action="" method="POST" novalidate>
+                        {{ form.login.csrf_token }}
                         {{ wtf.form_field(form.login.username) }}
                         {{ wtf.form_field(form.login.password) }}
                         {{ wtf.form_field(form.login.remember_me) }}
@@ -33,13 +34,15 @@
                 <div class="card-body">
                     <h5 class="card-title">Create a new profile</h5>
                     <form action="", method="POST" novalidate>
+                        {{ form.register.csrf_token }}
                         {{ wtf.form_field(form.register.first_name) }}
                         {{ wtf.form_field(form.register.last_name) }}
                         {{ wtf.form_field(form.register.username) }}
                         {{ wtf.form_field(form.register.password) }}
                         {{ wtf.form_field(form.register.confirm_password) }}
-                        {{ wtf.form_field(form.register.submit, class="btn btn-primary") }}
+                        {{ wtf.form_field(form.register.submit1, class="btn btn-primary") }}
                     </form>
+                    
                 </div>
             </div>
         </div>
