--- a/app/templates/stream.html
+++ b/app/templates/stream.html
@@ -23,8 +23,8 @@
             <div class="card">
                 <div class="card-header">
                     <div class="row align-items-center">
-                        <a class="col-4" href={{url_for('profile', username=post.username)}}><span class="fa fa-user" style="font-size: 25px"></span>&nbsp;{{post.username}}</a>
-                        <span class="col-8 text-right">{{post.creation_time}}</span>
+                        <span class="fa fa-user" style="font-size: 25px"></span>&nbsp;{{post.username}}
+                        <span class="col-11 text-right">{{post.creation_time}}</span>
                     </div>
                 </div>
                 <div class="card-body">
